sandc/test/fixtures/astRegression/shouldFail/productions/statement/UnsyntacticYieldall.sand
pub class UnsyntacticYieldall {
    foo() {
        yieldall bar;
    }
}